@@ -110,8 +110,8 @@ struct spvm_env {
   void* allocator;
   SPVM_ENV* (*new_env_raw)();
   void (*free_env_raw)(SPVM_ENV* env);
-  void* float_object_basic_type_id;
-  void* double_object_basic_type_id;
+  int32_t (*check_runtime_assignability)(SPVM_ENV* env, int32_t cast_basic_type_id, int32_t cast_type_dimension, void* object);
+  int32_t (*check_runtime_assignability_array_element)(SPVM_ENV* env, void* array, void* element);
   void* runtime;
   void* exception_object;
   void* native_mortal_stack;
@@ -203,7 +203,7 @@ struct spvm_env {
   void (*leave_scope)(SPVM_ENV* env, int32_t scope_id);
   int32_t (*remove_mortal)(SPVM_ENV* env, int32_t scope_id, void* remove_object);
   int32_t (*is_type)(SPVM_ENV* env, void* object, int32_t basic_type_id, int32_t type_dimension);
-  int32_t (*has_callback)(SPVM_ENV* env, void* object, int32_t callback_basic_type_id);
+  int32_t (*is_object_array)(SPVM_ENV* env, void* object);
   int32_t (*get_object_basic_type_id)(SPVM_ENV* env, void* object);
   int32_t (*get_object_type_dimension)(SPVM_ENV* env, void* object);
   int32_t (*weaken)(SPVM_ENV* env, void** object_address);
@@ -281,13 +281,10 @@ struct spvm_env {
   int32_t (*init_env)(SPVM_ENV* env);
   void (*call_init_blocks)(SPVM_ENV* env);
   void (*cleanup_global_vars)(SPVM_ENV* env);
-  int32_t (*is_object_array)(SPVM_ENV* env, void* object);
   int32_t (*get_method_id_cache)(SPVM_ENV* env, const char* method_cache_name, int32_t method_cache_name_length);
   int32_t (*get_field_id_cache)(SPVM_ENV* env, const char* field_cache_name, int32_t field_cache_name_length);
   int32_t (*get_class_var_id_cache)(SPVM_ENV* env, const char* class_var_cache_name, int32_t class_var_cache_name_length);
   void (*free_env_prepared)(SPVM_ENV* env);
-  int32_t (*check_runtime_assignability_array_element)(SPVM_ENV* env, void* array, void* element);
-  int32_t (*check_runtime_assignability)(SPVM_ENV* env, int32_t cast_basic_type_id, int32_t cast_type_dimension, void* object);
 };
 
 
