@@ -21,6 +21,17 @@ Revision history for SPVM
         * Remove "short_object_basic_type_id" native API. ID 10 is reused by "allocator" native API.
         * Remove "int_object_basic_type_id" native API. ID 11 is reused by "new_env_raw" native API.
         * Remove "long_object_basic_type_id" native API. ID 12 is reused by "free_env_raw" native API.
+        * Remove "float_object_basic_type_id" native API. ID 13 is reused by "check_runtime_assignability" native API.
+        * Remove "double_object_basic_type_id" native API. ID 14 is reused by "check_runtime_assignability_array_element" native API.
+        * Remove "has_callback" native API. ID 106 is reused Y_CALLBACK
+        * Change ID of SPVM_NATIVE_C_BASIC_TYPE_CATEGORY_ANY_OBJECT from 10 to 9
+        * Remove "byte_object_basic_type_id" native API. ID 9 is reused by "api" native API.
+        * Remove "short_object_basic_type_id" native API. ID 10 is reused by "allocator" native API.
+        * Remove "int_object_basic_type_id" native API. ID 11 is reused by "new_env_raw" native API.
+        * Remove "long_object_basic_type_id" native API. ID 12 is reused by "free_env_raw" native API.
+        * Remove "float_object_basic_type_id" native API. ID 13 is reused by "check_runtime_assignability" native API.
+        * Remove "double_object_basic_type_id" native API. ID 14 is reused by "check_runtime_assignability_array_element" native API.
+        * Remove "has_callback" native API. ID 106 is reused by "is_object_array" native API.
 0.9514  2022-05-02
         [CHANGE]
         * Add no_compiler_api to SPVM::Builder::Config::Exe
